<resources>

    <!-- App -->
    <string name="app_name">Inventario UG</string>
    <string name="app_subtitulo">Equipos de laboratorio</string>
    <string name="inicio_saludo_pordefecto">Bienvenido</string>
    <string name="inicio_universidad">Universidad de Guayaquil</string>

    <string name="inicio_titulo_registro_label">Registrar</string>
    <string name="inicio_titulo_registro_sub">Nuevo elemento</string>

    <string name="inicio_titulo_inventario_label">Inventario</string>
    <string name="inicio_titulo_inventario_sub">Ver elementos</string>

    <string name="inicio_titulo_prefs_label">Preferencias</string>
    <string name="inicio_titulo_prefs_sub">Datos personales</string>

    <string name="inicio_titulo_reporte_label">Reporte</string>
    <string name="inicio_label_reporte_sub">Resumen general</string>

    <string name="ic_logo">icono de probeta</string>
    <string name="btn_inicio_texto_universidad">Sitio web Univesidad de Guayaquil</string>
    <string name="url_universidad">https://www.ug.edu.ec</string>

    <string name="ic_descripcion_registrar">icono de + para registrar</string>
    <string name="ic_descripcion_inventario">icono de lista para el inventario</string>
    <string name="ic_descripcion_configuracion">icono de configuracion para las configuraciones</string>
    <string name="ic_descripcion_informe">icono de documentos para los informes</string>

    <string name="msjBienvenida">Hola %1$s Bienvenido</string>
    <string name="msj_bienvenida_pordefecto">Hola Estudiante Bienvenido</string>

    <!--Registrar-->
    <string name="registrar_elementos">Registrar Elementos</string>
    <string name="titulo_formulario">Nuevo Elemento</string>
    <string name="subtitulo_formulario">Completa la información del equipo de laboratorio</string>
    <string name="label_nombre">Nombre:</string>
    <string name="hint_nombre">Ej. Microscopio óptico</string>
    <string name="label_categoria">Categoria:</string>

    <string name="label_cantidad">Cantidad:</string>
    <string name="hint_cantidad">2</string>
    <string name="label_ubicacion">Ubicación:</string>
    <string name="hint_ubicacion">En el estante 2</string>
    <string name="label_observacion">Observación:</string>
    <string name="hint_observacion">Semi roto</string>
    <string name="label_fecha">Fecha de registro:</string>
    <string name="hint_fecha">05/13/2026</string>
    <string name="titulo_boton_guardar">Guardar elemento</string>
    <string name="msj_toast_correcto">Equipo Guardado Correctamente</string>
    <string name="msj_toast_falla">Error al guardar</string>
    <string name="error_nombreR">El campo nombre no puede quedar vacio</string>
    <string name="error_nombreNumero">El campo nombre no puede contener numeros</string>
    <string name="error_cantidad">La cantidad debe ser mayor que cero</string>
    <string name="error_ubicacion">El campo ubicacion no puede quedar vacio</string>
    <string name="error_observacion">El campo observación no puede quedar vacio</string>

    <!--Inventario-->
    <string name="titulo_inventario">Inventario</string>
    <string name="hint_buscar">Buscar por nombre</string>
    <string name="txt_boton_buscar">Buscar</string>
    <string name="txt_boton_agregar">Agregar</string>
    <string name="txt_elementos">Elementos: %1$d</string>

    <!--Detalle-->
    <string name="titulo_detalle">Detalle</string>
    <string name="txt_boton_editar">Modificar</string>
    <string name="txt_boton_eliminar">Eliminar</string>
    <string name="msg_toast_correcto">"Datos Actualizados"</string>
    <string name="msg_toast_fallo">"Datos no pudieron actualizarse"</string>
    <string name="confirmar_eliminacion">Confirmar Eliminación</string>
    <string name="mensaje_eliminar_item">¿Está seguro de que quiere eliminar este ítem?</string>
    <string name="btn_si">Sí</string>
    <string name="btn_no">No</string>
    <string name="item_eliminado_correctamente">Ítem eliminado correctamente</string>
    <string name="error_eliminar_item">Error al eliminar el ítem</string>

    <!--Reporte-->
    <string name="titulo_reporte">Reportes</string>
    <string name="subtitulo_reporte">Genera y comparte reportes del inventario académico.</string>
    <string name="label_reporte">Reporte interno</string>
    <string name="label_subReporte">Guarda el archivo en la memoria interna de la app.</string>
    <string name="txt_boton_interno">Generar reporte interno</string>
    <string name="label_reporte_externo">Reporte externo</string>
    <string name="label_reporte_externo_subtitulo">Exporta el archivo al directorio externo de la app.</string>
    <string name="txt_boton_externo">Exportar reporte</string>
    <string name="label_compartir">Compartir reporte</string>
    <string name="label_campartir_sub">Comparte el reporte mediante Intent implícito.</string>
    <string name="txt_boton_Compartir">Compartir reporte</string>
    <string name="nombre_default_estudiante">Estudiante</string>
    <string name="toast_reporte_interno_generado">Reporte interno generado</string>
    <string name="toast_archivo_exportado">Archivo exportado en:\n%s</string>
    <string name="chooser_compartir_reporte">Compartir reporte con...</string>

    <!--Preferencias-->
    <string name="titulo">Datos del Estudiante</string>
    <string name="descripcion">Esta información se guarda localmente en tu dispositivo (SharedPreferences).</string>
    <string name="titulo_label">Nombre del estudiante o responsable:</string>
    <string name="et_hint_nombre">Ej. Juan Pérez</string>
    <string name="curso_label">Curso:</string>
    <string name="et_hint_curso">Ej. Soft</string>
    <string name="titulo_preferencias">Preferencias</string>
    <string name="ic_back">Volver atras</string>
    <string name="msj_toast">Datos Guardados Correctamente</string>
    <string name="btn_texto_guardarPre">Guardar Preferencias</string>
    <string name="card_titulo">Mostrar saludo al iniciar</string>
    <string name="card_subtitulo">Saluda con tu nombre en la pantalla principal.</string>
    <string name="error_nombre">El campo nombre puede quedar vacio</string>
    <string name="error_curso">El campo curso no puede quedar vacio</string>
    <string name="btn_limpiar_texto">Borrar SharedPreferences</string>
    <string name="btn_limpiar">SharedPreferences Borradas</string>

</resources>