<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_registrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Body-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <!--Header-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="@color/primary_dark"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/ivVolver"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/ic_back"
                android:background="@null"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.043"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.521" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="180dp"
                android:text="@string/registrar_elementos"
                android:textColor="@color/bg_card"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.51" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@+id/header">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_formulario"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitulo_formulario"
                android:textSize="15sp"
                android:textColor="@color/text_muted"/>

            <!--Formulario-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nombre"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints=""
                android:background="@drawable/bg_edittext"
                android:hint="@string/hint_nombre"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:textColorHint="#9E9E9E"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_categoria"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <Spinner
                android:id="@+id/spCategoria"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_edittext"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:textColorHint="#9E9E9E"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_cantidad"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/etCantidad"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints=""
                android:background="@drawable/bg_edittext"
                android:hint="@string/hint_cantidad"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:textColorHint="#9E9E9E"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_ubicacion"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/etUbicacion"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints=""
                android:background="@drawable/bg_edittext"
                android:hint="@string/hint_ubicacion"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:textColorHint="#9E9E9E"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_observacion"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <EditText
                android:id="@+id/etObservación"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:autofillHints=""
                android:background="@drawable/bg_edittext"
                android:hint="@string/hint_observacion"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textSize="16sp"
                android:textColor="#000000"
                android:textColorHint="#9E9E9E"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fecha"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <DatePicker
                android:id="@+id/dpFecha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:backgroundTint="@color/bg_button_guardar"
                android:text="@string/titulo_boton_guardar"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>